--- a/week02/styles/styles.css
+++ b/week02/styles/styles.css
@@ -22,5 +22,35 @@ img{
 }
 
 p{
-    padding: 10px;
+    padding: 0;
+}
+
+main{
+    max-width: 840px;
+}
+
+aside{
+    width: 20rem;
+    margin: 1rem;
+    border: 1px solid rgb(0, 0, 0 / 0.2);
+    padding: 1rem;
+    background-color: #eee;
+    color: #333;
+    text-align: center;
+}
+
+aside img{
+    width: 200px;
+    height: auto;
+}
+
+main img{
+    width: 1500%;
+    height: auto;
+}
+
+footer{
+    margin: 15px;
+    border-top: dotted 1px #000;
+    text-align: center;
 }
