--- a/week02/styles/styles.css
+++ b/week02/styles/styles.css
@@ -34,7 +34,7 @@ aside{
     margin: 1rem;
     border: 1px solid rgb(0, 0, 0 / 0.2);
     padding: 1rem;
-    background-color: #eee;
+    background-color: #e9e3e3;
     color: #333;
     text-align: center;
 }
