--- a/styles/styles.css
+++ b/styles/styles.css
@@ -32,7 +32,7 @@ main{
 aside{
     width: 20rem;
     margin: 1rem;
-    border: 1px solid rgb(0, 0, 0 / 0.2);
+    border: 1px solid rgba(0, 0, 0, 0.2);
     padding: 1rem;
     background-color: #e9e3e3;
     color: #333;
@@ -50,7 +50,7 @@ main img{
 }
 
 footer{
-    margin: 15px;
-    border-top: dotted 1px #000;
+    margin-top: 20px; 
+    border-top: 2px solid black; 
     text-align: center;
 }
