--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -66,7 +66,7 @@ nav a {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background: rgba(0, 77, 64, 0.7);
+    background: #D1D8B5;
     color: var(--text-color);
     padding: 15px 25px;
     border-radius: 5px;
@@ -76,7 +76,7 @@ article {
     position: absolute;
     bottom: 10px;
     left: 10px;
-    background: rgba(0, 121, 107, 0.8);
+    background: #D1D8B5;
     padding: 15px;
     color: var(--text-color);
     border-radius: 5px;
