--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -57,8 +57,8 @@ nav a {
 
 .hero img {
     display: block;
-    width: 200px;
-    height: auto;
+    width: 20px;
+    height: 20px;
 }
 
 .hero h1 {
