--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -57,8 +57,8 @@ nav a {
 
 .hero img {
     display: block;
-    width: 20px;
-    height: 20px;
+    width: 100%;
+    height: auto;
 }
 
 .hero h1 {
@@ -83,7 +83,8 @@ article {
 }
 
 article img {
-    float: right;
+    float: center;
+    padding: 20px;
     margin-left: 10px;
     width: 20px;
     height: auto;
