--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -86,7 +86,7 @@ article img {
     float: center;
     margin-left: 10px;
     width: 20px;
-    height: auto;
+    padding: 5px;
     border-radius: 20%;
 }
 
