--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -83,10 +83,10 @@ article {
 }
 
 article img {
-    float: center;
+    float: right;
     margin-left: 10px;
     width: 20px;
-    padding: 5px;
+    padding: 10px;
     border-radius: 20%;
 }
 
