--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -73,7 +73,7 @@ nav a {
 }
 
 article {
-    position: absolute;
+    position: relative;
     bottom: 10px;
     left: 10px;
     background: #D1D8B5;
