--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -73,7 +73,7 @@ nav a {
 }
 
 article {
-    position: relative;
+    position: absolute;
     bottom: 10px;
     left: 10px;
     background: #D1D8B5;
@@ -83,7 +83,7 @@ article {
 }
 
 article img {
-    float: static;
+    float: right;
     margin-left: 10px;
     width: 20px;
     padding: 10px;
