--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -89,7 +89,13 @@ article img {
     padding: 10px;
     border-radius: 20%;
 }
-
+.hclient img{
+    float: right;
+    margin-left: 10px;
+    width: 20px;
+    padding: 10px;
+    border-radius: 20%;
+}
 section {
     padding: 20px;
     background: var(--text-color);
