--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -83,19 +83,14 @@ article {
 }
 
 article img {
+    position:absolute;
     float: right;
     margin-left: 10px;
     width: 20px;
     padding: 10px;
     border-radius: 20%;
 }
-.hclient img{
-    float: right;
-    margin-left: 10px;
-    width: 20px;
-    padding: 10px;
-    border-radius: 20%;
-}
+
 section {
     padding: 20px;
     background: var(--text-color);
