--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -81,12 +81,13 @@ nav a {
     padding: 15px;
     color: var(--text-color);
     border-radius: 5px;
+    opacity: 10%;
 }
 /*add .hero to already existing*/
 .hero article img {
     float: right;
     margin-left: 10px;
-    width: 500px;
+    width: 300px;
     height: auto;
     padding: 10px;
     border-radius: 20%;
@@ -106,6 +107,7 @@ section {
     background: var(--text-color);
     margin-top: 20px;
     border-radius: 5px;
+    
 }
 
 footer {
