--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -88,7 +88,7 @@ nav a {
     float: right;
     margin-left: 10px;
     width: 300px;
-    height: auto;
+    height: 300px;
     padding: 10px;
     border-radius: 20%;
 }
