--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -81,7 +81,7 @@ nav a {
     padding: 15px;
     color: var(--text-color);
     border-radius: 5px;
-    opacity: 5%;
+    opacity: 0.8;
 }
 /*add .hero to already existing*/
 .hero article img {
