--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -89,7 +89,7 @@ nav a {
     width: 100px;
     height: 100px;
     padding: 20px;
-    border-radius: 20%;
+    border-radius: 5px;
 }
 
 .hclient img {
