--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -63,7 +63,7 @@ nav a {
 
 .hero h1 {
     position: absolute;
-    top: 25%;
+    top: 15%;
     left: 50%;
     transform: translate(-50%, -50%);
     background: #D1D8B5;
@@ -80,6 +80,7 @@ nav a {
     padding: 15px;
     color: var(--text-color);
     border-radius: 5px;
+    opacity: 0.5;
 }
 /*add .hero to already existing*/
 .hero article img {
@@ -88,7 +89,7 @@ nav a {
     width: 100px;
     height: 100px;
     padding: 20px;
-    border-radius: 5px;
+    border-radius: 15px;
 }
 
 .hclient img {
