--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -75,11 +75,12 @@ nav a {
 .hero article {
     position: absolute;
     bottom: 10px;
-    left: 25%;
+    left: 20%;
     background: #D1D8B5;
     padding: 15px;
     color: var(--text-color);
     border-radius: 5px;
+    opacity: 0.3;
 }
 /*add .hero to already existing article img*/
 .hero article img {
