--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -112,6 +112,11 @@ nav a {
     padding: 20px;
 }
 
+.adventureLayout h2{
+    text-align: center;
+    width: 100%;
+    color: var(--secondary-color);
+}
 .adventureLayout figure {
     flex: 1 1 calc(20% - 10px);
     margin: 0;
