--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -113,6 +113,7 @@ nav a {
 }
 
 .adventureLayout h2{
+    flex-direction: column;
     text-align: center;
     width: 100%;
     color: var(--secondary-color);
