--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -102,11 +102,16 @@ nav a {
     background: var(--text-color);
     color: white;
 }
+
 .historyLayout h1 {
     text-align: center;
     padding: 20px;
     background: var(--primary-color);
     color: var(--text-color);
+}
+
+.historyLayout p {
+    color: var(--secondary-color);
 }
 
 .adventureLayout {
