--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -43,7 +43,7 @@ header img {
 }
 
 .headerGrid {
-    display: grid;
+    display: flex;
     justify-content: space-between;
     align-items: center;
 }
