--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -47,8 +47,10 @@ header img {
     display: flex;
     justify-content: space-between;*/
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
     align-items: center;
+
 }
 
 .headerGrid nav {
