--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -43,12 +43,12 @@ header img {
 }
 
 .headerGrid {
-    /*testing out grid
+    /*testing out grid*/
     display: flex;
-    justify-content: space-between;*/
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+    justify-content: space-between;
+    /*display: grid;
+    
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;*/
     align-items: center;
 
 }
