--- a/wwr/images/About US _ White Water Rafting_files/rafting(1).css
+++ b/wwr/images/About US _ White Water Rafting_files/rafting(1).css
@@ -23,8 +23,6 @@ h1, h2 {
     font-family: var(--font-heading);
     color: var(--primary-color);
     text-align: center;
-    display: flex;
-    justify-content: center;
 }
 
 p {
@@ -35,8 +33,8 @@ p {
 
 header {
     display: flex;
-    justify-content: space-around;
-    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
     padding: 10px;
     background-color: var(--primary-color);
 }
@@ -50,9 +48,7 @@ header img {
     display: flex;
     justify-content: space-between;*/
     display: grid;
-    grid-template-columns: 1fr 2fr 2fr 2fr 2fr;
-    gap: 10px;
-    align-items: center;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     
 }
 
@@ -112,37 +108,28 @@ nav a {
 
 .historyLayout {
     display: flex;
-    justify-content: baseline;
-    align-items: center;
+    flex-direction: column;
+    flex-wrap: wrap;
     background: var(--text-color);
     color: white;
 }
 
-.historyLayout h2 {
+/*.historyLayout h2 {
     display: flex;
     justify-content: center;
     text-align: center;
     padding: 20px;
     background: var(--primary-color);
     color: var(--text-color);
-    margin-bottom: 20px;
-} 
+} */
 
-.historycontent img {
+.historyLayout img {
     width: 200px;
 }
 
-.historyContent p {
+.historyLayout p {
     color: var(--accent-color);
     text-wrap: wrap;
-}
-
-.historyContent {
-    display: flex;
-    gap: 20px;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: flex-start;
 }
 
 .adventureLayout {
