--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -46,12 +46,8 @@ header img {
 }
 
 .headerGrid {
-    /*testing out grid
-    display: flex;
-    justify-content: space-between;*/
     display: grid;
-    grid-template-columns: 1fr 2fr 2fr 2fr 2fr;
-    gap: 10px;
+    grid-template-columns: auto 1fr;
     align-items: center;
     
 }
@@ -68,6 +64,10 @@ nav a {
     font-weight: bold;
 }
 
+nav ul {
+    display: flex;
+    justify-content: space-around;
+}
 
 .hero {
     position: relative;
@@ -109,41 +109,6 @@ nav a {
     padding: 20px;
     border-radius: 15px;
 }
-
-/*.historyLayout {
-    display: flex;
-    justify-content: baseline;
-    align-items: center;
-    background: var(--text-color);
-    color: white;
-}
-
-.historyLayout h2 {
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    padding: 20px;
-    background: var(--primary-color);
-    color: var(--text-color);
-    margin-bottom: 20px;
-} 
-
-.historycontent img {
-    width: 200px;
-}
-
-.historyContent p {
-    color: var(--accent-color);
-    text-wrap: wrap;
-}
-
-.historyContent {
-    display: flex;
-    gap: 20px;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: flex-start;
-}*/
 
 .historyLayout {
     display: grid;
@@ -230,7 +195,7 @@ footer {
     color: var(--text-color);
     margin-top: 20px;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
 }
 
