--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -219,3 +219,68 @@ footer .socLinks {
 footer .socLinks a img {
     width: 30px;
 }
+
+/*contact us form */
+.contact-info, .form-section, .team {
+    background-color: var(--accent-color);
+    color: var(--text-color);
+    padding: 20px;
+    margin: 20px auto;
+    border-radius: 10px;
+}
+.contactColor, .contactColor1, .contactColor2, .contactColor3{
+    color: var(--text-color);
+    padding: 20px;
+    margin: 20px auto;
+    border-radius: 10px;
+}
+.contact-info p {
+    color: var(--text-color);
+}
+
+.employee-profiles {
+    display: flex;
+    justify-content: space-evenly;
+    gap: 20px;
+    flex-wrap: wrap;
+}
+
+.employee-profiles figure {
+    text-align: center;
+    max-width: 200px;
+}
+
+.employee-profiles img {
+    width: 100%;
+    border-radius: 10px;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+form input[type="text"],
+form input[type="email"],
+form textarea {
+    padding: 8px;
+    border-radius: 5px;
+    border: 1px solid var(--text-color);
+    width: 100%;
+}
+
+form button {
+    background-color: var(--primary-color);
+    color: var(--text-color);
+    font-weight: bold;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+form button:hover {
+    background-color: var(--text-color);
+    color: white;
+}
