fixing contact details text color

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -4,7 +4,7 @@
     --secondary-color: #020022;
     --accent-color: #d1d8b5;
     --text-color: #00347f;
-    --background-color: #e0f2f1;
+    --background-color: #e0eff2;
     --font-heading: 'Rock Salt', serif;
     --font-body: 'Roboto', sans-serif;
 }
