adding pictures to the contact page

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -247,7 +247,6 @@ footer .socLinks a img {
 .employeePics {
     display: flex;
     justify-content: space-evenly;
-    gap: 20px;
     flex-wrap: wrap;
 }
 
@@ -257,8 +256,7 @@ footer .socLinks a img {
 }
 
 .employeePics img {
-    width: 100%;
-    max-width: 150px;
+    width: 200px;
     border-radius: 10px;
 }
 
