--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -338,3 +338,118 @@ section {
     flex: 1 1 45%;
     margin: 0;
 }
+
+/*index.html styling*/
+
+.slideFade {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: auto;
+    opacity: 0;
+    transition: opacity 1s ease-in-out;
+  }
+  
+  .carousel {
+    position: relative;
+    height: 400px;
+    overflow: hidden;
+  }
+  
+  .slideFade img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  
+  .slideFade:first-child {
+    opacity: 1;
+  }
+
+  .purpose {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 20px;
+    flex-wrap: wrap;
+  }
+  
+  .purpose-text {
+    flex: 1 1 45%;
+  }
+  
+  .purpose-img {
+    flex: 1 1 45%;
+    display: flex;
+    justify-content: center;
+  }
+  
+  .purpose-img img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 10px;
+  }
+  .offers1 {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 20px;
+    flex-wrap: wrap;
+  }
+  
+  .offers-text {
+    flex: 1 1 45%;
+  }
+  
+  .offers-img {
+    flex: 1 1 45%;
+    display: flex;
+    justify-content: center;
+  }
+  
+  .offers-img img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 10px;
+  }
+  
+  .newsletter {
+    background-color: var(--accent-color);
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+  }
+  
+  .newsletter-top {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 15px;
+  }
+  
+  .newsletter-form {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 15px;
+    margin-top: 15px;
+    justify-content: center;
+  }
+  
+  .newsletter-form input,
+  .newsletter-form button {
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid var(--text-color);
+  }
+  
+  .newsletter-form button {
+    background-color: var(--primary-color);
+    color: var(--text-color);
+    font-weight: bold;
+    border: none;
+    cursor: pointer;
+  }
+
+  
