--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -353,6 +353,63 @@ section {
 }
 
 /*index.html styling*/
+
+/*styling the hero section*/
+
+.carouselHero {
+    position: relative;
+    height: 400px;
+    overflow: hidden;
+}
+
+.carouselHero img {
+    width: 100%;
+    object-fit: cover;
+}
+.heroText {
+    position: absolute;
+    top: 125px;
+    left: 250px;
+    text-align: center;
+    font-family: var(--font-heading);
+    z-index: 2;
+}
+
+.heroText h1 {
+    font-size: 1.5em;
+    color: var(--text-color);
+    text-shadow: 2px 2px 4px rgba(197, 197, 197, 0.5);
+    transform: translateX(-50%) rotate(5deg);
+}
+
+.heroText p {
+    font-size: 1.2em;
+    color: var(--text-color);
+    text-shadow: 2px 2px 4px rgba(197, 197, 197, 0.5);
+    transform: translateX(-50%) rotate(5deg);
+}
+.slideImg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    opacity: 0;
+    transition: opacity 1s ease-in-out;
+    z-index: 0;
+    animation: fade 3s ease-in-out;
+}
+  
+.slideImg.active {
+    opacity: 1;
+    z-index: 1;
+}
+
+@keyframes fade {
+    from { opacity: 0.4; }
+    to { opacity: 1; }
+}
+
+/*styling newsletter section*/
 .newsletter {
     background-color: var(--secondary-color);
     color: var(--accent-color);
@@ -362,39 +419,37 @@ section {
     margin: 0 auto;
 }
 
-.newsletter-title h3{
+.nwsltrTtl h3{
     font-size: 1px;
     margin-bottom: 20px;
     font-family: var(--font-body);
 }
 
-.newsletter-form input[type="text"],
-.newsletter-form input[type="email"] {
-    width: 100%;
-    padding: 15px;
-    margin-bottom: 15px;
+.nswltrFmt {
+    display: flex;
+    justify-content: center;
+    gap: 1px;
+    flex-wrap: wrap;
+    max-width: 800px;
+    margin: auto;
+  }
+  
+.nswltrFmt input[type="text"],
+.nswltrFmt input[type="email"] {
+    padding: 1px;
     border: 1px solid #ccc;
-    border-radius: 4px;
-    font-size: 16px;
+    border-radius: 5px;
+    flex: 1;
+    min-width: 200px;
 }
 
-.sbscbBtn {
-    background-color: var(--primary-color);
-    color: var(--text-color);
-    font-weight: bold;
-    padding: 12px 24px;
-    border: none;
-    border-radius: 30px; /* to round my button */
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-}
-
-.sbscbBtn:hover {
+.nswltrFmt:hover {
     background-color: var(--secondary-color);
     color: var(--accent-color);
 }
 
 /*styling to go to the trips page*/
+
 .offerWrapper {
     background-color: transparent;
     position: relative;
