--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -166,14 +166,14 @@ nav ul {
     background-color: #e0f2f1;
     padding: 20px;
 }
-/*
+
 .adventureLayout h2{
     flex-direction: column;
     text-align: center;
     width: 100%;
     color: var(--text-color);
     text-shadow: 2px 2px 4px black;
-}*/
+}
 
 .adventureLayout figure {
     flex: 1 1 calc(20% - 10px);
